Update gitignore again because git is stupid

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,12 @@
 /bin/Debug/net8.0
 /obj/Release/net8.0
 /obj/Debug/net8.0
+/obj/Debug/net8.0/Badlands.AssemblyInfo.cs
+/obj/Debug/net8.0/Badlands.AssemblyInfoInputs.cache
+/obj/Debug/net8.0/Badlands.assets.cache
+/obj/Debug/net8.0/Badlands.csproj.AssemblyReference.cache
+/obj/Debug/net8.0/Badlands.GeneratedMSBuildEditorConfig.editorconfig
+/obj/Badlands.csproj.nuget.dgspec.json
+/obj/Badlands.csproj.nuget.g.props
+/obj/project.assets.json
+/obj/project.nuget.cache
